[package]
name = "aoc2022-rs"
description = "Solver for Advent of Code 2022"
authors = ["Nicklas Vedsted"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
